# namu

./: .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  design.mdc  namu.mdc  taplo.toml
.cursor/rules/: design.mdc  graph.mdc  namu.mdc
.github/workflows/: rust.yaml
crates/apps/cli/: Cargo.toml
crates/apps/cli/src/: config.rs  exporter.rs  main.rs  sync.rs
crates/apps/master/: Cargo.toml
crates/apps/master/src/: redis_store.rs  routes.rs  worker.rs
crates/apps/worker/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  ir.rs  lib.rs  registry.rs  task.rs  value.rs
crates/engine/: Cargo.toml
crates/engine/src/: context.rs  engine.rs  kernel.rs  lib.rs  simple_engine.rs  store.rs
crates/engine/src/context/: dynamic.rs  dynamic_context.rs  naive.rs  naive_context.rs  simple.rs
crates/engine/src/engine/: naive.rs  naive_engine.rs  simple_engine.rs
crates/engine/src/kernel/: mod.rs
crates/engine/src/runtime/: codec.rs  store.rs
crates/engine/src/traits/: engine.rs
crates/flow/: Cargo.toml
crates/flow/src/: builder.rs  graph.rs  ir.rs  lib.rs
crates/graph/: Cargo.toml
crates/graph/examples/: advanced_while.rs  audio.rs  audio.rs.ignore  conditional.rs  simple.rs  vec.rs  while.rs  workflow.rs
crates/graph/src/: builder.rs  executor.rs  ir.rs  lib.rs
crates/graph/tests/: execution_tests.rs  graph_structure_tests.rs  integration_tests.rs  serialization_tests.rs
crates/graph/tests/common/: mod.rs
crates/graph/tests/compile-fail/: 01-assign-to-immutable.rs  01-assign-to-immutable.stderr  02-uninitialized-let.rs  02-uninitialized-let.stderr
crates/libs/core/src/: ir.rs  lib.rs  registry.rs  task.rs  value.rs
crates/libs/engine/: Cargo.toml
crates/libs/engine/src/: context.rs
crates/libs/engine/src/adapters/: simple.rs
crates/libs/engine/src/context/: dynamic_context.rs  naive_context.rs
crates/libs/engine/src/kernel/: drive.rs  plan.rs
crates/libs/engine/src/runtime/: graph.rs  mod.rs
crates/libs/engine/src/traits/: scheduler.rs
crates/libs/flow/src/: ir.rs  lib.rs
crates/libs/macros/src/: bridge.rs  lib.rs  register.rs  workflow.rs
crates/libs/macros/tests/expand/: task_batch.expanded.rs  task_batch.rs  task_single_multiple_args.rs  (+23 more)
crates/libs/proto/: Cargo.toml
crates/libs/proto/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  register.rs  task.rs  type_macro.rs  workflow.rs
crates/macros/tests/expand/: task_batch.expanded.rs  task_batch.rs  task_single_complex_return_type.expanded.rs  task_single_complex_return_type.rs  task_single_multiple_args.expanded.rs  task_single_multiple_args.rs  task_single_no_args_return_unit.expanded.rs  task_single_no_args_return_unit.rs  task_single_one_arg.expanded.rs  task_single_one_arg.rs  task_single_tuple_three_elems.expanded.rs  task_single_tuple_three_elems.rs  task_stream.expanded.rs  task_stream.rs  workflow_chained_tasks.expanded.rs  workflow_chained_tasks.rs  workflow_if_else_return_value.expanded.rs  workflow_if_else_return_value.rs  workflow_if_else_statement.expanded.rs  workflow_if_else_statement.rs  workflow_if_statement.expanded.rs  workflow_if_statement.rs  workflow_if_with_task_in_condition.expanded.rs  workflow_if_with_task_in_condition.rs  workflow_multiple_mutable_vars.expanded.rs  workflow_multiple_mutable_vars.rs  workflow_nested_if_in_while.expanded.rs  workflow_nested_if_in_while.rs  workflow_simple_return.expanded.rs  workflow_simple_return.rs  workflow_tuple_destructuring_three_elems.expanded.rs  workflow_tuple_destructuring_three_elems.rs  workflow_while_loop.expanded.rs  workflow_while_loop.rs
crates/master/: Cargo.toml
crates/master/src/: db.rs  main.rs  object_store.rs  planner.rs  redis_store.rs  routes.rs  storage.rs  worker.rs
crates/proto/src/: lib.rs
crates/task/: Cargo.toml
crates/task/src/: context.rs  lib.rs  task.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs  object_store.rs  wasm_executor.rs
dev/: docker-compose.app.yml  docker-compose.yml
docs/: README.md  architecture.md  cli.md  contributing.md  development.md  getting-started.md  manifests.md  quickstart.md  value-tree-acceleration.md
docs/concepts/: engine.md  ir.md  value-tree.md
docs/guides/: manifests.md  tasks.md  workflows.md
docs/operations/: configuration.md
e2e/tasks/add/: Cargo.toml  manifest.json
e2e/tasks/add/src/: lib.rs
e2e/workflows/: add.workflow.json
examples/advanced/: README.md
examples/advanced/tasks/add/: Cargo.toml  manifest.json
examples/advanced/tasks/embed_batch/: Cargo.toml  manifest.json
examples/advanced/tasks/id_range/: Cargo.toml  manifest.json
examples/advanced/tasks/is_even/: Cargo.toml  manifest.json
examples/advanced/tasks/less_than/: Cargo.toml  manifest.json
examples/advanced/tasks/maybe_fail/: Cargo.toml  manifest.json
examples/advanced/tasks/normalize/: Cargo.toml  manifest.json
examples/advanced/tasks/score/: Cargo.toml  manifest.json
examples/advanced/workflows/: Cargo.toml
examples/advanced/workflows/src/: lib.rs
examples/basic/simple/: Cargo.toml
examples/basic/simple/src/: lib.rs  main.rs
examples/simple/simple/: Cargo.toml
examples/simple/simple/src/: lib.rs  main.rs
examples/simple/tasks/add/: Cargo.toml
examples/simple/tasks/is_less/: Cargo.toml
scripts/: e2e.sh  verify.sh
scripts/dev/: run-local-e2e.sh
src/: lib.rs
tests/: direct_task_tests.rs  engine_tests.rs  graph_structure_tests.rs  serialization_tests.rs  task_macro_default_tests.rs  type_macro_tests.rs
tests/common/: mod.rs
tests/compile-fail/: 01-assign-to-immutable.rs  01-assign-to-immutable.stderr  02-uninitialized-let.rs  02-uninitialized-let.stderr  03-tuple-destructuring-no-init.rs  03-tuple-destructuring-no-init.stderr  04-uninitialized-simple-let.rs  04-uninitialized-simple-let.stderr  05-assignment-in-expression.rs  05-assignment-in-expression.stderr  06-tuple-destruct-empty.rs  06-tuple-destruct-empty.stderr
tests/e2e/tasks/add/: manifest.json
(+12 files in other folders)
