[workspace]
exclude = ["tasks/*", "pipelines/*"]
members = [
  "crates/cli",
  "crates/core",
  "crates/engine",
  "crates/flow",
  "crates/macros",
  "crates/master",
  "crates/worker",

  "examples/simple/simple",
  "examples/simple/tasks/add",
  "examples/simple/tasks/is_less",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
darling = "0.20"
erased-serde = "0.4"
futures = "0.3"
futures-util = "0.3"
hashbrown = "0.15"
inventory = "0.3"
itertools = "0.14"
kanal = { version = "0.1", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["full"] }

[package]
name = "namu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
inventory = { workspace = true }
namu-core = { path = "crates/core" }
namu-engine = { path = "crates/engine" }
namu-flow = { path = "crates/flow" }
namu-macros = { path = "crates/macros" }

[dev-dependencies]
erased-serde = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = "1.0.105"
