[workspace]
exclude = ["tasks/*", "pipelines/*", "e2e/tasks/*"]
members = [
  "crates/cli",
  "crates/core",
  "crates/engine",
  "crates/flow",
  "crates/macros",
  "crates/master",
  "crates/proto",
  "crates/worker",

  "examples/simple/simple",
  "examples/simple/tasks/add",
  "examples/simple/tasks/is_less",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
darling = "0.20"
erased-serde = "0.4"
futures = "0.3"
futures-util = "0.3"
hashbrown = "0.15"
inventory = "0.3"
itertools = "0.14"
kanal = { version = "0.1", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["full"] }

[package]
name = "namu"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
inventory = { workspace = true }
namu-core = { path = "crates/core", version = "0.1.0" }
namu-engine = { path = "crates/engine", version = "0.1.0" }
namu-flow = { path = "crates/flow", version = "0.1.0" }
namu-macros = { path = "crates/macros", version = "0.1.0" }

[dev-dependencies]
erased-serde = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
trybuild = "1.0.105"
