[workspace]
exclude = ["tasks/*", "pipelines/*", "tests/e2e/tasks/*"]
members = [
  "crates/apps/cli",
  "crates/apps/master",
  "crates/apps/worker",
  "crates/libs/core",
  "crates/libs/engine",
  "crates/libs/flow",
  "crates/libs/macros",
  "crates/libs/proto",

  "examples/basic/simple",
  "examples/basic/tasks/add",
  "examples/basic/tasks/is_less",
  "examples/advanced/workflows",
  "examples/advanced/tasks/add",
  "examples/advanced/tasks/less_than",
  "examples/advanced/tasks/is_even",
  "examples/advanced/tasks/id_range",
  "examples/advanced/tasks/normalize",
  "examples/advanced/tasks/embed_batch",
  "examples/advanced/tasks/score",
  "examples/advanced/tasks/maybe_fail",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
darling = "0.20"
erased-serde = "0.4"
futures = "0.3"
futures-util = "0.3"
hashbrown = "0.15"
inventory = "0.3"
itertools = "0.14"
kanal = { version = "0.1", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["full"] }

[package]
name = "namu"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
inventory = { workspace = true }
namu-core = { path = "crates/libs/core", version = "0.1.0" }
namu-engine = { path = "crates/libs/engine", version = "0.1.0" }
namu-flow = { path = "crates/libs/flow", version = "0.1.0" }
namu-macros = { path = "crates/libs/macros", version = "0.1.0" }

[dev-dependencies]
erased-serde = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
trybuild = "1.0.105"
