[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "namu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
