[package]
name = "namu-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "namu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = "2.5"
