[package]
name = "namu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
futures = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
typeid = "1.0"
erased-serde = { workspace = true }
inventory.workspace = true
