[package]
name = "namu-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
inventory = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
