[package]
name = "namu-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
erased-serde = { workspace = true }
hashbrown = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
kanal = { workspace = true }
namu-core = { path = "../core", version = "0.1.0" }
scc = "2.3"
