[package]
name = "namu-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
erased-serde.workspace = true
namu-core = { path = "../core" }
namu-macros = { path = "../macros" }
once_cell = "1.21"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
trybuild = "1.0"
