[package]
name = "namu-flow"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
erased-serde = { workspace = true }
namu-core = { path = "../core", version = "0.1.0" }
namu-macros = { path = "../macros", version = "0.1.0" }
once_cell = "1.21"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
trybuild = "1.0"
