[package]
name = "graph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
common = { path = "../common" }
futures = { workspace = true }
kanal = { workspace = true }
macros = { path = "../macros" }
once_cell = "1.21.3"
petgraph = "0.8.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
task = { path = "../task" }
tokio = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
