[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = { version = "1", default-features = false }
quote = "1"
syn = { version = "2", features = [
    "full",
    "visit-mut",
    "visit",
    "extra-traits",
] }

[dev-dependencies]
macrotest = "1.1.0"
anyhow = "1"
