[package]
name = "namu-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
erased-serde = { workspace = true }
inventory = { workspace = true }
proc-macro-error2 = { version = "2", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [
  "full",
  "visit-mut",
  "visit",
  "extra-traits",
] }

[dev-dependencies]
anyhow = "1"
macrotest = "1.1.0"
