[package]
name = "namu-master"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "namu-master"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.17", features = ["v4"] }
