[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
url = "2.5"
