[package]
name = "namu-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "namu-worker"
path = "src/main.rs"

[dependencies]
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.17", features = ["v4"] }
