[package]
name = "namu-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "namu-worker"
path = "src/main.rs"

[dependencies]
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
url = "2.5"
uuid = { version = "1.17", features = ["v4"] }
