[package]
name = "namu-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "namu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
namu-proto = { path = "../../libs/proto", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tokio = { workspace = true }
walkdir = "2.5"
zstd = "0.13"
