[package]
name = "namu-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "namu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
namu-core = { path = "../../libs/core", version = "0.1.0" }
namu-proto = { path = "../../libs/proto", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tokio = { workspace = true }
toml = "0.8"
toml_edit = "0.24"
walkdir = "2.5"
zstd = "0.13"
