[package]
name = "namu-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "namu-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
http = "1"
libloading = "0.8"
namu-engine = { path = "../../libs/engine", version = "0.1.0" }
namu-proto = { path = "../../libs/proto", version = "0.1.0" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqsign-aws-v4 = "2.0.1"
reqsign-core = "2.0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3.20"
uuid = { version = "1.17", features = ["v4", "serde"] }
wasmtime = "40.0.2"
wasmtime-wasi = { version = "40.0.2", default-features = false, features = ["p1"] }
zstd = "0.13"
